# SmolLM2-1.7B_FastApi

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  main.py  pyproject.toml
app/: dependencies.py  main.py
app/api/: router.py
app/services/: llm_service.py  test_config.py
